--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "recompile": "yarn clean && yarn compile",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
-    "node:local": "hardhat node",
+    "eth-node": "hardhat node",
     "deploy": "hardhat deploy",
     "lint": "solhint contracts/*.sol",
     "lint:fix": "solhint contracts/*.sol --fix",
     "format": "prettier --write .",
     "test:unit": "hardhat test",
-    "coverage": "hardhat coverage"
+    "coverage": "hardhat coverage",
+    "upgrade-box": "hardhat run scripts/upgrade-box.ts --network localhost"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.12",
